// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: importing 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="id1234"
      >
        <td>
          <Tooltip
            overlay="awesome-project-exclamation"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Awesome Project !
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="company/best-projects"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              Company / Best Projects
            </span>
          </Tooltip>
        </td>
        <td>
          <a
            className="display-inline-flex-center big-spacer-right"
            href="https://gitlab.company.com/best-projects/awesome-project-exclamation"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DetachIcon
              className="little-spacer-right"
            />
            onboarding.create_project.gitlab.link
          </a>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={true}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
          </Button>
        </td>
      </tr>
      <tr
        key="2"
      >
        <td>
          <Tooltip
            overlay="awesome-project-exclamation"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              <Link
                to={
                  Object {
                    "pathname": "/dashboard",
                    "search": "?id=already-imported",
                  }
                }
              >
                <QualifierIcon
                  className="spacer-right"
                  qualifier="TRK"
                />
                Already Imported
              </Link>
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="company/best-projects"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              Company / Best Projects
            </span>
          </Tooltip>
        </td>
        <td>
          <a
            className="display-inline-flex-center big-spacer-right"
            href="https://gitlab.company.com/best-projects/awesome-project-exclamation"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DetachIcon
              className="little-spacer-right"
            />
            onboarding.create_project.gitlab.link
          </a>
        </td>
        <td>
          <span
            className="display-flex-center display-flex-justify-end already-set-up"
          >
            <CheckIcon
              className="little-spacer-right"
              size={12}
            />
            onboarding.create_project.repository_imported
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    pageSize={30}
    total={2}
  />
</div>
`;

exports[`should render correctly: no projects 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="onboarding.create_project.gitlab.no_projects"
    id="onboarding.create_project.gitlab.no_projects"
    values={
      Object {
        "link": <Link
          to={
            Object {
              "pathname": "/projects/create",
              "search": "?mode=gitlab&resetPat=1",
            }
          }
        >
          onboarding.create_project.update_your_token
        </Link>,
      }
    }
  />
</Alert>
`;

exports[`should render correctly: no projects when searching 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <div
    className="padded"
  >
    no_results
  </div>
  <ListFooter
    count={0}
    loadMore={[MockFunction]}
    loading={false}
    pageSize={30}
    total={0}
  />
</div>
`;

exports[`should render correctly: projects 1`] = `
<div
  className="boxed-group big-padded create-project-import"
>
  <SearchBox
    className="spacer"
    loading={false}
    minLength={3}
    onChange={[MockFunction]}
    placeholder="onboarding.create_project.search_prompt"
  />
  <hr />
  <table
    className="data zebra zebra-hover"
  >
    <tbody>
      <tr
        key="id1234"
      >
        <td>
          <Tooltip
            overlay="awesome-project-exclamation"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              Awesome Project !
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="company/best-projects"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              Company / Best Projects
            </span>
          </Tooltip>
        </td>
        <td>
          <a
            className="display-inline-flex-center big-spacer-right"
            href="https://gitlab.company.com/best-projects/awesome-project-exclamation"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DetachIcon
              className="little-spacer-right"
            />
            onboarding.create_project.gitlab.link
          </a>
        </td>
        <td
          className="text-right"
        >
          <Button
            disabled={false}
            onClick={[Function]}
          >
            onboarding.create_project.set_up
          </Button>
        </td>
      </tr>
      <tr
        key="2"
      >
        <td>
          <Tooltip
            overlay="awesome-project-exclamation"
          >
            <strong
              className="project-name display-inline-block text-ellipsis"
            >
              <Link
                to={
                  Object {
                    "pathname": "/dashboard",
                    "search": "?id=already-imported",
                  }
                }
              >
                <QualifierIcon
                  className="spacer-right"
                  qualifier="TRK"
                />
                Already Imported
              </Link>
            </strong>
          </Tooltip>
          <br />
          <Tooltip
            overlay="company/best-projects"
          >
            <span
              className="text-muted project-path display-inline-block text-ellipsis"
            >
              Company / Best Projects
            </span>
          </Tooltip>
        </td>
        <td>
          <a
            className="display-inline-flex-center big-spacer-right"
            href="https://gitlab.company.com/best-projects/awesome-project-exclamation"
            rel="noopener noreferrer"
            target="_blank"
          >
            <DetachIcon
              className="little-spacer-right"
            />
            onboarding.create_project.gitlab.link
          </a>
        </td>
        <td>
          <span
            className="display-flex-center display-flex-justify-end already-set-up"
          >
            <CheckIcon
              className="little-spacer-right"
              size={12}
            />
            onboarding.create_project.repository_imported
          </span>
        </td>
      </tr>
    </tbody>
  </table>
  <ListFooter
    count={2}
    loadMore={[MockFunction]}
    loading={false}
    pageSize={30}
    total={2}
  />
</div>
`;

exports[`should render correctly: undefined projects 1`] = `
<Alert
  className="spacer-top"
  variant="warning"
>
  <FormattedMessage
    defaultMessage="onboarding.create_project.gitlab.no_projects"
    id="onboarding.create_project.gitlab.no_projects"
    values={
      Object {
        "link": <Link
          to={
            Object {
              "pathname": "/projects/create",
              "search": "?mode=gitlab&resetPat=1",
            }
          }
        >
          onboarding.create_project.update_your_token
        </Link>,
      }
    }
  />
</Alert>
`;
